--- a/real-estate-crm/package.json
+++ b/real-estate-crm/package.json
@@ -37,7 +37,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@vercel/analytics": "latest",
+    "apexcharts": "^5.3.5",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,6 +53,7 @@
     "next": "14.2.16",
     "next-themes": "latest",
     "react": "^18",
+    "react-apexcharts": "^1.7.0",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.60.0",
